--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,22 +12,24 @@
     tools:context="com.londonappbrewery.iampoor.MainActivity">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/image_coal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="45dp"
         app:srcCompat="@drawable/coal" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/text_i_am_poor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
         android:fontFamily="casual"
         android:text="@string/title"
-        android:textColor="#000000"
-        android:textSize="40sp"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="50sp"
         android:textStyle="bold" />
 </RelativeLayout>
