--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,32 +4,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBackground"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@android:color/darker_gray"
     tools:context="com.londonappbrewery.iampoor.MainActivity">
+
+    <TextView
+        android:id="@+id/text_i_am"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="125dp"
+        android:layout_marginStart="110dp"
+        android:fontFamily="casual"
+        android:text="@string/i_am"
+        android:textColor="@android:color/black"
+        android:textSize="75sp"
+        tools:ignore="RtlCompat" />
 
     <ImageView
         android:id="@+id/image_coal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="45dp"
+        android:layout_marginBottom="225dp"
         app:srcCompat="@drawable/coal" />
 
     <TextView
-        android:id="@+id/text_i_am_poor"
+        android:id="@+id/text_poor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="125dp"
+        android:layout_marginStart="25dp"
+        android:layout_toEndOf="@+id/text_i_am"
         android:fontFamily="casual"
-        android:text="@string/title"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="50sp"
-        android:textStyle="bold" />
+        android:text="@string/poor"
+        android:textColor="@android:color/black"
+        android:textSize="75sp"
+        android:textStyle="bold"
+        android:layout_toRightOf="@+id/text_i_am"
+        tools:ignore="RtlCompat" />
+
 </RelativeLayout>
