Challenge Completed on 1/1/2021.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="125dp"
-        android:layout_marginStart="110dp"
+        android:layout_marginLeft="110dp"
         android:fontFamily="casual"
         android:text="@string/i_am"
         android:textColor="@android:color/black"
@@ -33,7 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="125dp"
-        android:layout_marginStart="25dp"
+        android:layout_marginLeft="25dp"
         android:layout_toEndOf="@+id/text_i_am"
         android:fontFamily="casual"
         android:text="@string/poor"
