--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,12 @@
         android:id="@+id/text_i_am"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="125dp"
-        android:layout_marginLeft="110dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginLeft="80dp"
         android:fontFamily="casual"
         android:text="@string/i_am"
         android:textColor="@android:color/black"
-        android:textSize="75sp"
+        android:textSize="50sp"
         tools:ignore="RtlCompat" />
 
     <ImageView
@@ -25,22 +25,21 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="225dp"
+        android:layout_marginBottom="125dp"
         app:srcCompat="@drawable/coal" />
 
     <TextView
         android:id="@+id/text_poor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="125dp"
-        android:layout_marginLeft="25dp"
-        android:layout_toEndOf="@+id/text_i_am"
+        android:layout_marginTop="100dp"
+        android:layout_marginRight="80dp"
+        android:layout_alignParentRight="true"
         android:fontFamily="casual"
         android:text="@string/poor"
         android:textColor="@android:color/black"
-        android:textSize="75sp"
+        android:textSize="50sp"
         android:textStyle="bold"
-        android:layout_toRightOf="@+id/text_i_am"
         tools:ignore="RtlCompat" />
 
 </RelativeLayout>
